<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_general_title">
        <CheckBoxPreference
                android:key="@string/pref_key_qa_activate"
                android:title="@string/pref_general_qa_activation"
                android:summaryOn="@string/pref_general_qa_activation_summary_true"
                android:summaryOff="@string/pref_general_qa_activation_summary_false"
                android:defaultValue="true"/>
        <Preference
                android:title="@string/pref_general_qa"
                android:summary="@string/pref_general_qa_summary"
                android:key="@string/pref_key_qa_manage"
                />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
                android:key="@string/pref_key_notif_activate"
                android:title="@string/pref_general_notif_activation"
                android:summaryOn="@string/pref_general_notif_activation_summary_true"
                android:summaryOff="@string/pref_general_notif_activation_summary_false"
                android:defaultValue="false"
                android:dependency="qa_activate"/>

        <RingtonePreference
                android:ringtoneType="notification"
                android:title="@string/pref_notif_ringtone"
                android:key="@string/pref_key_notif_ringtone"
                android:dependency="notif_activate"
                android:showDefault="true"
                android:showSilent="true"
                android:defaultValue="content://settings/system/notification_sound"/>

        <CheckBoxPreference
                android:key="@string/pref_key_notif_vibrate"
                android:title="@string/pref_notif_vibrate"
                android:defaultValue="true"
                android:dependency="notif_activate"
                />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/pref_about_title">
        <Preference
                android:title="@string/pref_about_rate"
                android:summary="@string/pref_about_rate_summary"
                android:key="@string/pref_key_rate"/>
        <Preference
                android:title="@string/pref_about_about"
                android:summary="@string/pref_about_about_summary"
                android:key="@string/pref_key_about"/>
        <Preference
                android:title="@string/pref_about_version"
                android:key="@string/pref_key_version"/>
    </PreferenceCategory>
</PreferenceScreen>